# flowgentichire

./: .env.local  .gitignore  README.md  agent.py  requirements.txt
.claude/: settings.local.json
agent-starter-python/: livekit.toml  pyproject.toml
agent-starter-python/src/: agent.py  caller.py  dashboard.py  db.py  email_service.py
agent-starter-python/tests/: test_agent.py
dashboard/: .env.example  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/api/parse-jd/: route.ts
dashboard/app/api/requirements/: route.ts
dashboard/app/api/requirements/[id]/: route.ts
dashboard/app/api/requirements/[id]/candidates/[rcId]/: route.ts
dashboard/app/api/requirements/[id]/execute/: route.ts
dashboard/app/api/vobiz/webhook/: route.ts
dashboard/app/candidates/[id]/: page.tsx
dashboard/app/requirements/[id]/: page.tsx
dashboard/app/requirements/new/: page.tsx
dashboard/app/sign-in/[[...sign-in]]/: page.tsx
dashboard/components/: assessment-badge.tsx  candidates-table.tsx  main-tabs.tsx  recruiter-dashboard.tsx  requirement-form.tsx  scout-live-view.tsx  stats-grid.tsx  status-badge.tsx
dashboard/lib/: server.ts  supabase.ts
supabase/migrations/: 20260613_add_call_mode.sql  20260613_add_vobiz_call_fields.sql  20260614_add_company_to_requirements.sql  20260614_enable_realtime.sql
